--- a/index.html
+++ b/index.html
@@ -19,3 +19,8 @@ Created on 20200131-->
 </body>
 <head>Video
 <p><a href="https://youtu.be/mtV1XWAddYQ>SWAN LAAAKEEEEEEEEE BABAYYY</a></p> 
+
+        <head>
+        <p> VECTOR!
+        <!--image-->
+        <img src="logo.jpg">
