--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@ Created on 20200131-->
 <img src="undawata.jpg">
 
 </body>
-<iframe width="420" height="315"
-src="https://youtu.be/mtV1XWAddYQ">
-</iframe>
+    <head>Video
+<p><a href="https://youtu.be/mtV1XWAddYQ">SWANNN LAAAKEE BABAYYYYY</a></p>
 
         <head>
         <p> VECTOR!
