--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Created on 20200131-->
 <img src="undawata.jpg">
 
 </body>
-    <head>Video
+    <head>
 <p><a href="https://youtu.be/mtV1XWAddYQ">SWANNN LAAAKEE BABAYYYYY</a></p>
 
         <head>
